--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,10 +8,31 @@
             "args": [
                 "compile"
             ],
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            }
+            "group": "build",
+            "presentation": {
+                "echo": true,
+                "reveal": "silent",
+                "focus": false,
+                "panel": "shared"
+            },
+            "problemMatcher": []
+        },
+        {
+            "label": "mvn-debug",
+            "type": "shell",
+            "command": "mvn",
+            "args": [
+                "javafx:run",
+                "-Djavafx.args=\"-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5005\""
+            ],
+            "group": "build",
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": true,
+                "panel": "new"
+            },
+            "problemMatcher": []
         }
     ]
 } 
